--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,7 +99,14 @@ body {
 }
 
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 
@@ -691,6 +698,19 @@ margin: 0;
   text-decoration: none;
 }
 
+.breadcrumbs_item:focus a{
+  color: rgba(255, 255, 255, 1);
+}
+
+.breadcrumbs_item:hover a{
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs_item:active a{
+  color:rgba(255, 255, 255, 0.3);
+}
+
+
 .breadcrumbs {
   display: flex;
   width: 150px;
@@ -848,6 +868,24 @@ margin: 0;
   background-color: transparent;
   text-transform: uppercase;
   padding: 8px 57.5px;
+  margin-top: 32px;
+}
+
+.reset_button:focus {
+  color:rgba(255, 255, 255, 0.7);
+}
+
+.reset_button:hover {
+  color:rgba(255, 255, 255, 1);
+
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
+  padding: 5px 54.5px
+}
+
+
+.reset_button:active {
+  color:rgba(255, 255, 255, 0.3);
 }
 
 .catalog_filter_group {
@@ -857,6 +895,10 @@ margin: 0;
 .button_bold{
   border: 2px solid black;
   border-radius: 4px;
+  display: block;
+  box-sizing: border-box;
+  width: 48px;
+  height: 48px;
 }
 
 .button_light {
@@ -1268,4 +1310,37 @@ margin: 0;
 .accept_button:active {
   background-color: #82B3D3;
   color: rgba(255, 255, 255, 0.3);
+}
+
+.Search_hotel_button:focus,
+.lets_go_button:focus,
+.hotel_card_button-more:focus{
+  background-color: #615048;
+}
+
+.Search_hotel_button:hover,
+.lets_go_button:hover,
+.hotel_card_button-more:hover{
+  background-color: #615048;
+}
+
+.Search_hotel_button:active,
+.lets_go_button:active,
+.hotel_card_button-more:active{
+  background-color:#756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+
+.hotel_card_button-favorite-chosed:focus {
+  background-color: #6C9E42;
+}
+
+.hotel_card_button-favorite-chosed:hover {
+  background-color: #6C9E42;
+}
+
+.hotel_card_button-favorite-chosed:active {
+  background-color: #7DB54F;
+  color:  rgba(255, 255, 255, 0.3);
 }
