--- a/styles/styles.css
+++ b/styles/styles.css
@@ -642,6 +642,13 @@ margin: 0;
   line-height: 24px;
 }
 
+.catalog-range-slider {
+  width: 288px;
+  height: 104px;
+  padding: 0px;
+  margin: 0 70px 0 0;
+}
+
 .catalog-range-slider-legend {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
@@ -806,6 +813,8 @@ margin: 0;
 .buttons-wrapper {
   display: flex;
   flex-direction: column;
+  margin-top: 56px;
+  margin-right: 70px;
 }
 
 
@@ -868,14 +877,25 @@ margin: 0;
   margin-bottom: 16px;
 }
 
+.checkbox-app {
+  position: relative;
+}
+
 .accommodation_type_list {
   padding: 0;
   margin-right: 140px;
 }
 
+.accommodation_type {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
 .control-input-ac {
   margin-right: 16px;
 }
+
 
 
 .accept_button {
