--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1036,15 +1036,17 @@ padding: 12px 20px;
 
 .control-swimmingpool {
   display: flex;
+  position: relative;
   margin-bottom: 16px;
   align-content: center;
   padding: 0;
+  right: -20px;
+  top: -2px;
 }
 
-.control-parking {
-  margin-bottom: 16px;
-  padding: 0;
-}
+
+
+
 
 .accommodation_type_list_item {
   margin-bottom: 16px;
@@ -1053,6 +1055,60 @@ padding: 12px 20px;
 .checkbox-app {
   position: relative;
 }
+
+ *\\*
+
+.control {
+  position: relative;
+  display: block;
+  padding-left: 36px;
+}
+
+
+.control-label {
+  margin-left: 16px;
+}
+
+.control-mark {
+  position: absolute;
+  top: 2px;
+  left: -20px;
+  width: 20px;
+  height: 20px;
+  background: #FFFFFF;
+  border-radius: 4px;
+}
+
+.control:focus .control-mark {
+  background: #FFFFFF;
+  border-radius: 4px;
+  outline: 3px solid #83B3D3;
+}
+
+.control:hover .control-mark {
+  background: rgba(200, 217, 231, 1);
+  border-radius: 4px;
+}
+
+.control:active .control-mark {
+  background: rgba(153, 183, 209, 1);
+  border-radius: 4px;
+}
+
+.control-Wi-Fi {
+  position: relative;
+  top: -2px;
+  left: 20px;
+}
+
+.control-parking {
+  margin-bottom: 19px;
+  padding: 0;
+  position: relative;
+  top: -2px;
+  left: 20px;
+}
+
 
 .accommodation_type_list {
   width: 141px;
