--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1084,9 +1084,17 @@ padding: 12px 20px;
   border-radius: 4px;
 }
 
-.control:active .control-mark {
-  background: rgba(153, 183, 209, 1);
+.control:hover .control-label {
+  color: rgba(200, 217, 231, 1);
+}
+
+.control:hover .control-mark {
+  background: rgba(200, 217, 231, 1);
   border-radius: 4px;
+}
+
+.control:active .control-label {
+  color: rgba(153, 183, 209, 1);
 }
 
 .control:active .control-mark svg{
