--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1297,7 +1297,7 @@ padding: 12px 20px;
   border-radius: 4px;
 }
 
-..button_light:active {
+.button_light:active {
   border: 2px solid #000000;
   border-radius: 4px;
 }
@@ -1306,16 +1306,22 @@ padding: 12px 20px;
 .sort-select {
   width: 292px;
   height: 49px;
-  font-family: 'PT Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+  font-family: PT Sans;
+  font-style: Regular;
+  Font-size: 18px;
+  Line-height: 21px;
   color: #333333;
   padding-left: 20px;
   padding-top: 14px;
   padding-bottom: 14px;
   margin-right: 70px;
+  border-radius: 4px;
+  appearance: none;
+  border: 2px solid;
+  border-color: #E5E5E5;
+  background-image: url("../images/icons/Vector-down.svg") ;
+  background-repeat: no-repeat;
+  background-position: right 20px center;
 }
 
 .sort-options-wrapper {
@@ -1341,7 +1347,7 @@ padding: 12px 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 14px 12px;
+  padding: 16px 14px;
 }
 
 .view-icon-image {
@@ -1643,16 +1649,6 @@ padding: 12px 20px;
   background-color: white;
 }
 
-
-
-.select_control{
-  font-family: 'PT Sans', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-  color: #333333;
-}
 
 .amaunt-title{
   font-family: 'PT Sans', sans-serif;
