--- a/styles/styles.css
+++ b/styles/styles.css
@@ -446,7 +446,6 @@ footer {
 
 
 .social_list_item-tg{
-  order: 2;
   margin-left: 27px;
 }
 
@@ -1115,7 +1114,7 @@ padding: 12px 20px;
   position: relative;
 }
 
- *\\*
+
 
 .control {
   position: relative;
@@ -1804,6 +1803,7 @@ padding: 12px 20px;
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
+  z-index: 2;
 }
 
 .modal{
