Правит  позицию модала

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1812,7 +1812,7 @@ padding: 12px 20px;
   background-color: #FFFFFF;
   box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
   border-radius: 30px;
-  margin: 396px auto auto auto;
+  margin: auto auto auto auto;
   padding: 64px 70px;
   box-sizing: border-box;
   position: relative;
