--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,8 +50,6 @@ body {
   color: rgba(0, 0, 0, 0.3);
 }
 
-
-
 .navigation_pages {
   width: 600px;
   display: flex;
@@ -90,9 +88,6 @@ body {
   margin-left: 32px;
   margin-bottom: 5px;
 }
-
-
-
 
 .navigation_list {
   margin: 0;
@@ -133,8 +128,6 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-
 
 li {
 list-style-type: none;
@@ -283,7 +276,6 @@ list-style-type: none;
   text-align: center;
   padding: 5px 5px 5px 5px;
   box-sizing: border-box;
-
 }
 
 
@@ -372,13 +364,12 @@ list-style-type: none;
   order: -1;
 }
 
-
 .advantages-dark-blue {
-background-color: #82B3D3;
-color: #FFFFFF;
+  background-color: #82B3D3;
+  color: #FFFFFF;
 }
 
-.advantages_description_white{
+.advantages_description_white {
   background-color: #82B3D3;
   color: #FFFFFF;
   margin: 0px;
@@ -390,19 +381,19 @@ background-color: rgba(131, 179, 211, 0.12);
 }
 
 .advantages-soft-blue-tansporent {
-color: #000000;
-background-color: rgba(131, 179, 211, 0.2);
+  color: #000000;
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .main_index h3 {
-font-family: 'PT Sans', sans-serif;
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 28px;
-text-align: center;
-text-transform: uppercase;
-margin: 0px;
+  font-family: 'PT Sans', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0px;
 }
 
 footer {
@@ -445,33 +436,29 @@ footer {
   fill: #83B3D3;
 }
 
-.button:focus svg{
+.button:focus svg {
   fill:#68A2CA;
   outline: none;
 }
 
-.button:hover svg{
+.button:hover svg {
   fill:#68A2CA;
-
 }
 
-.button:active svg{
+.button:active svg {
   fill:rgba(104, 162, 202, 0.3);
 }
-
-
 
 .social_list_item-tg{
   margin-left: 27px;
 }
-
 
 .phonenumber {
   max-width: 340px;
   margin-right: 235.5px;
 }
 
-.phonenumber-LINK:focus{
+.phonenumber-LINK:focus {
   color: #756157;
   outline: none;
 }
@@ -481,7 +468,7 @@ footer {
   outline: none;
 }
 
-.phonenumber-LINK:hover{
+.phonenumber-LINK:hover {
   color: #756157;
 }
 
@@ -489,7 +476,7 @@ footer {
   fill: #756157;
 }
 
-.phonenumber-LINK:active{
+.phonenumber-LINK:active {
   color: rgba(117, 97, 87, 0.3);
 }
 
@@ -501,13 +488,11 @@ footer {
   fill: black;
 }
 
-
 .about-text {
   max-width: 120px;
 }
 
-
-.search_hotel-wrapper{
+.search_hotel-wrapper {
   display: flex;
   flex-direction: column;
   margin: 96px auto;
@@ -517,14 +502,14 @@ footer {
 }
 
 .Search_hotel_title {
-font-family: 'PT Sans', sans-serif;
-font-style: normal;
-font-weight: 700;
-font-size: 30px;
-line-height: 36px;
-text-align: center;
-text-transform: uppercase;
-margin: 0 0 20px 0;
+  font-family: 'PT Sans', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0 0 20px 0;
 }
 
 .hotel_title {
@@ -537,18 +522,18 @@ margin: 0 0 20px 0;
   line-height: 28px;
 }
 
-.Search_hotel_text{
-font-family: 'PT Sans', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 22px;
-line-height: 26px;
-text-align: center;
-color: #333333;
-margin: 0;
+.Search_hotel_text {
+  font-family: 'PT Sans', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #333333;
+  margin: 0;
 }
 
-.Search_hotel_button{
+.Search_hotel_button {
   display: block;
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
@@ -571,7 +556,6 @@ margin: 0;
   box-sizing: border-box;
 }
 
-
 .newsletter-wrapper {
   display: flex;
   flex-direction: column;
@@ -587,7 +571,6 @@ margin: 0;
   margin: 54px auto 104px auto;
   width: 684px;
 }
-
 
 .subscribe {
   background: #F2F2F2;
@@ -637,8 +620,7 @@ margin: 0;
   margin: 0 auto 20px auto ;
 }
 
-
-.newsletter_description{
+.newsletter_description {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -649,7 +631,7 @@ margin: 0;
   margin: 0 auto ;
 }
 
-.newsletter_description-black{
+.newsletter_description-black {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -660,7 +642,7 @@ margin: 0;
   margin: 0 auto ;
 }
 
-.subscribe{
+.subscribe {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -721,12 +703,11 @@ margin: 0;
   margin-bottom: 32px;
 }
 
-
 .sub_modul-wrapper {
   align-self: center;
 }
 
-.subscribe_button{
+.subscribe_button {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -749,8 +730,7 @@ margin: 0;
   padding-bottom: 42px;
 }
 
-
-.phonenumber a{
+.phonenumber a {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -763,7 +743,7 @@ margin: 0;
   text-decoration-line: none;
 }
 
-.catalog_filter{
+.catalog_filter {
   background-image: url("../images/filter_back.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
@@ -772,17 +752,16 @@ margin: 0;
   min-height: 412px;
 }
 
-.inner_header_title{
+.inner_header_title {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
   color: #FFFFFF;
-
 }
 
-.vector-right{
+.vector-right {
   background-image: url("../images/icons/arrow-right.png");
   width: 6.39px;
   height: 9.94px;
@@ -797,7 +776,7 @@ margin: 0;
   margin-right: auto;
 }
 
-.breadcrumbs_item a{
+.breadcrumbs_item a {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -807,19 +786,18 @@ margin: 0;
   text-decoration: none;
 }
 
-.breadcrumbs_item:focus a{
+.breadcrumbs_item:focus a {
   color: rgba(255, 255, 255, 1);
   outline: none;
 }
 
-.breadcrumbs_item:hover a{
+.breadcrumbs_item:hover a {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.breadcrumbs_item:active a{
+.breadcrumbs_item:active a {
   color:rgba(255, 255, 255, 0.3);
 }
-
 
 .breadcrumbs {
   display: flex;
@@ -859,25 +837,6 @@ margin: 0;
   flex-direction: column;
 }
 
-.range {
-  width: 287px;
-  height: 160px;
-  margin-right: 70px;
-  position: relative;
-  height: 4px;
-  margin-bottom: 16px;
-  background-color:white;
-  opacity: 0.3;
-  border-radius: 5px;
-}
-
-.filter-range {
-  margin-top: 26px;
-  color: #fff;
-  text-transform: uppercase
-}
-
-
 .price-controls {
   position: relative;
   height: 24px;
@@ -890,7 +849,6 @@ margin: 0;
 }
 
 .price-controls::after {
-
   content: "";
   position: absolute;
   top: 50%;
@@ -920,7 +878,6 @@ margin: 0;
   width: 90px;
   padding: 20px 12px
 }
-
 
 .price-controls .max-price {
   width: 101px;
@@ -1041,7 +998,6 @@ padding: 12px 20px;
   background: #fff
 }
 
-
 .buttons-wrapper {
   display: flex;
   flex-direction: column;
@@ -1049,11 +1005,8 @@ padding: 12px 20px;
   margin-right: 70px;
 }
 
-
-
-
 .accommodation_type_list_item,
-.control{
+.control {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1088,7 +1041,7 @@ padding: 12px 20px;
   margin-right: 16px;
 }
 
-.control{
+.control {
   align-items: center;
   padding: 0;
 }
@@ -1103,10 +1056,6 @@ padding: 12px 20px;
   top: -2px;
 }
 
-
-
-
-
 .accommodation_type_list_item:first-child {
   margin-bottom: 16px;
   margin-top: 30px;
@@ -1117,24 +1066,19 @@ padding: 12px 20px;
   margin-top: 16px;
 }
 
-
 .accommodation_type_list_item:last-child {
   margin-bottom: 16px;
   margin-top: 20px;
 }
 
-
 .checkbox-app {
   position: relative;
 }
-
-
 
 .control {
   position: relative;
   display: block;
 }
-
 
 .control-label {
   margin-left: 16px;
@@ -1176,7 +1120,6 @@ padding: 12px 20px;
   fill:#3F5E72;
 }
 
-
 .checked-svg {
   position: absolute;
   left: 25%;
@@ -1198,7 +1141,6 @@ padding: 12px 20px;
   top: -2px;
   left: 20px;
 }
-
 
 .accommodation_type_list {
   width: 141px;
@@ -1226,24 +1168,20 @@ padding: 12px 20px;
   border-radius: 50%;
 }
 
-
-.control-radio-hot{
+.control-radio-hot {
   position: absolute;
   left: -36px;
 }
 
-.control-radio-mot{
+.control-radio-mot {
   position: absolute;
   left: -36px;
 }
 
-.control-radio-app{
+.control-radio-app {
   position: absolute;
   left: -36px;
 }
-
-
-
 
 .control-input-ac[type="radio"]:checked + .control-radio::before {
   position: absolute;
@@ -1255,7 +1193,6 @@ padding: 12px 20px;
   border-radius: 50%;
   content: "";
 }
-
 
 .checkbox-tupe-ac:hover .radio-otion-describtion {
   color: rgba(200, 217, 231, 1);
@@ -1273,8 +1210,6 @@ padding: 12px 20px;
   background-color: rgba(153, 183, 209, 1);
 }
 
-
-
 .accept_button {
   font-family: 'PT Sans';
   font-style: normal;
@@ -1290,7 +1225,6 @@ padding: 12px 20px;
   border: none;
   cursor: pointer;
   border-radius: 4px;
-
 }
 
 .reset_button {
@@ -1316,9 +1250,7 @@ padding: 12px 20px;
 
 .reset_button:hover {
   color:rgba(255, 255, 255, 0.7);
-
 }
-
 
 .reset_button:active {
   color:rgba(255, 255, 255, 0.3);
@@ -1328,7 +1260,7 @@ padding: 12px 20px;
   border: none;
 }
 
-.button_bold{
+.button_bold {
   border: 2px solid black;
   border-radius: 4px;
   display: block;
@@ -1358,7 +1290,6 @@ padding: 12px 20px;
   border: 2px solid #000000;
   border-radius: 4px;
 }
-
 
 .sort-select {
   width: 292px;
@@ -1413,7 +1344,7 @@ padding: 12px 20px;
   row-gap: 0px;
 }
 
-.options_icons-wrapper a{
+.options_icons-wrapper a {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1446,7 +1377,7 @@ padding: 12px 20px;
   padding: 0;
   }
 
-.hotel_card_link{
+.hotel_card_link {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -1494,7 +1425,6 @@ padding: 12px 20px;
   text-align: right;
 }
 
-
 .card-content-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -1525,7 +1455,7 @@ padding: 12px 20px;
   margin-right: auto;
 }
 
-.hotel_card_button-more{
+.hotel_card_button-more {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
@@ -1542,7 +1472,7 @@ padding: 12px 20px;
   border-radius: 4px;
 }
 
-.hotel_card_button-favorite{
+.hotel_card_button-favorite {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
@@ -1559,7 +1489,7 @@ padding: 12px 20px;
   padding: 8px 20px;
 }
 
-.hotel_card_button-favorite-chosed{
+.hotel_card_button-favorite-chosed {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
@@ -1594,7 +1524,7 @@ padding: 12px 20px;
   margin-top: 10px;
 }
 
-.four-stars{
+.four-stars {
   background-image: url("../images/icons/star.png");
   background-size: 25% auto;
   background-color: #FFFFFF;
@@ -1602,7 +1532,7 @@ padding: 12px 20px;
   height: 20px;
 }
 
-.three-stars{
+.three-stars {
   background-image: url("../images/icons/star.png");
   background-size: 33% auto;
   background-color: #FFFFFF;
@@ -1610,7 +1540,7 @@ padding: 12px 20px;
   height: 20px;
 }
 
-.two-stars{
+.two-stars {
   background-image: url("../images/icons/star.png");
   background-size: 50% auto;
   background-color: #FFFFFF;
@@ -1665,9 +1595,7 @@ padding: 12px 20px;
   background-color: rgba(130, 179, 211, 1);
 }
 
-
-
-.pagination_link{
+.pagination_link {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -1681,7 +1609,7 @@ padding: 12px 20px;
   background-color: #82B3D3;
 }
 
-.pagination_item-current{
+.pagination_item-current {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -1716,7 +1644,7 @@ padding: 12px 20px;
   background-color: white;
 }
 
-.pagination-white a{
+.pagination-white a {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
@@ -1731,9 +1659,7 @@ padding: 12px 20px;
   display: block;
 }
 
-
-
-.amaunt-title{
+.amaunt-title {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1742,7 +1668,7 @@ padding: 12px 20px;
   color: #333333;
 }
 
-.newsletter_title-catalog{
+.newsletter_title-catalog {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -1754,7 +1680,7 @@ padding: 12px 20px;
   background-color: white;
 }
 
-.newsletter_description-catalog{
+.newsletter_description-catalog {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1764,7 +1690,6 @@ padding: 12px 20px;
   color: #333333;
   background-color: white;
 }
-
 
 .subscribe_button:focus,
 .hotel_card_button-favorite:focus,
@@ -1788,24 +1713,23 @@ padding: 12px 20px;
 
 .Search_hotel_button:focus,
 .lets_go_button:focus,
-.hotel_card_button-more:focus{
+.hotel_card_button-more:focus {
   background-color: #615048;
   outline: none;
 }
 
 .Search_hotel_button:hover,
 .lets_go_button:hover,
-.hotel_card_button-more:hover{
+.hotel_card_button-more:hover {
   background-color: #615048;
 }
 
 .Search_hotel_button:active,
 .lets_go_button:active,
-.hotel_card_button-more:active{
+.hotel_card_button-more:active {
   background-color:#756157;
   color: rgba(255, 255, 255, 0.3);
 }
-
 
 .hotel_card_button-favorite-chosed:focus {
   background-color: #6C9E42;
@@ -1832,7 +1756,7 @@ padding: 12px 20px;
   z-index: 2;
 }
 
-.modal{
+.modal {
   width: 717px;
   min-height: 576px;
   background-color: #FFFFFF;
@@ -1842,7 +1766,6 @@ padding: 12px 20px;
   padding: 64px 70px;
   box-sizing: border-box;
   position: relative;
-
 }
 
 .closing-modal {
@@ -1878,8 +1801,6 @@ padding: 12px 20px;
   z-index: 3;
 }
 
-
-
 .modal-title {
   font-family: 'PT Sans',sans-serif;
   font-style: normal;
@@ -1890,9 +1811,7 @@ padding: 12px 20px;
   margin: 0;
   margin-bottom: 64px;
   color: #000000;
-
 }
-
 
 .children-line label {
   font-family: 'PT Sans',sans-serif;
@@ -1913,7 +1832,6 @@ padding: 12px 20px;
   color: #000000;
   margin-top: 12px;
   margin-bottom: 12px;
-
 }
 
 .arrival-date,
@@ -1952,7 +1870,8 @@ padding: 12px 20px;
   display: flex;
 
 }
-.arrival-date{
+
+.arrival-date {
   margin-left: 24px;
 }
 
@@ -1977,7 +1896,6 @@ padding: 12px 20px;
   padding: 0px;
   width: 100%;
   cursor: pointer;
-
 }
 
 .calendar-line {
@@ -2008,7 +1926,7 @@ padding: 12px 20px;
   line-height: 21px;
 }
 
-.adults-children{
+.adults-children {
   width: 100%;
   min-height: 48px;
   margin-bottom: 48px;
@@ -2041,7 +1959,6 @@ padding: 12px 20px;
   fill: rgba(204, 204, 204, 1);
 }
 
-
 .adult-choose,
 .children-choose {
   width: 31px;
@@ -2052,7 +1969,6 @@ padding: 12px 20px;
   background: #F2F2F2;
   border-radius: 4px;
   border: none;
-
 }
 
 .buttons-wrapper-modal {
@@ -2071,7 +1987,7 @@ padding: 12px 20px;
   display: flex;
 }
 
-.children-line label{
+.children-line label {
   margin-top: 12px;
   margin-bottom: 12px;
 }
@@ -2095,9 +2011,22 @@ padding: 12px 20px;
   top: -4px;
 }
 
-.info-svg{
+.info-svg {
   position: absolute;
   margin-left: 10px;
+  left: 48px;
+  bottom: 12px;
+}
+
+.info-banner::before {
+  content: "";
+  width: 9px;
+  height: 9px;
+  background-color: rgba(51, 51, 51, 1);
+  z-index: 10;
+  position: absolute;
+  color: #000;
+  border: #000000;
 }
 
 .info-banner {
@@ -2117,9 +2046,8 @@ padding: 12px 20px;
   background: #333333;
   box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-
 }
 
-.info-svg:hover+.info-banner {
+.info-svg:hover +.info-banner {
  z-index: 1;
 }
