--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1879,6 +1879,27 @@ padding: 12px 20px;
   margin-left: 18px;
 }
 
+.departure-date:hover,
+.arrival-date:hover {
+  background-image:   url("../images/icons/calendar.png");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+}
+
+.departure-date:active,
+.arrival-date:active {
+  background-image:   url("../images/icons/calendar.png");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+}
+
+.departure-date:focus,
+.arrival-date:focus {
+  background-image:   url("../images/icons/calendar.png");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
+}
+
 .button-find {
   font-family: 'PT Sans', sans-serif;
   font-style: normal;
@@ -2018,15 +2039,16 @@ padding: 12px 20px;
   bottom: 12px;
 }
 
-.info-banner::before {
-  content: "";
-  width: 9px;
-  height: 9px;
+.banner-element {
   background-color: rgba(51, 51, 51, 1);
-  z-index: 10;
+  width: 15px;
+  height: 15px;
   position: absolute;
-  color: #000;
-  border: #000000;
+  transform: rotate(45deg);
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
+  left: 63px;
+  bottom: -12px;
+  z-index: -1;
 }
 
 .info-banner {
@@ -2048,6 +2070,6 @@ padding: 12px 20px;
   border-radius: 10px;
 }
 
-.info-svg:hover +.info-banner {
+.info-svg:hover ~ div{
  z-index: 1;
 }
